--- a/static/css/style.css
+++ b/static/css/style.css
@@ -82,14 +82,14 @@ table {
 }
 .logo_1{
 	display: inline;
-	float: rigth;
+	float: left;
 	margin-left: 10px;
 	margin-right: 10px;
 	padding-left:200px;
 }
 .v_18{
 	display: inline;
-	float: rigth;
+	float: right;
 	margin-left: 10px;
 	margin-right: 10px;
 	padding-left:880px;
