--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,13 +95,7 @@ table {
 	padding-left:880px;
 
 }
-.sky_small{
-    background-image: url("../images/sky.png");
-    background-repeat: no-repeat;
-    position: relative;
-    width: 100%;
-    height: 500px;
-}
+
 .fondo {
 /*		background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #3588e2), color-stop(1, #ffffff));
 		background-image:-webkit-linear-gradient(#3588e2, #ffffff);   
@@ -109,6 +103,11 @@ table {
 		background-image:-o-linear-gradient(top, #3588e2, #ffffff);
 		filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#3588e2', EndColorStr='#ffffff');  */
 		background-color: #eef6ff;
+		background-attachment: fixed;
+		background-image: url("../images/sky.png");
+    	background-repeat: no-repeat;
+    	position: relative;
+    	background-attachment: fixed;
 }
 .menu_capa {
 
@@ -121,7 +120,7 @@ table {
 	
 	#menu {
 		width: 960px;
-		margin: 60px auto;
+		margin: -20px auto;
 		border: 1px solid #222;
 		background-color: #111;
 		background-image: -moz-linear-gradient(#444, #111); 
@@ -183,7 +182,7 @@ table {
 		position: absolute;
 		top: 38px;
 		left: 0;
-		z-index: 1;    
+		z-index: 10;    
 		background: #444;
 		background: -moz-linear-gradient(#444, #111);
 		background-image: -webkit-gradient(linear, left top, left bottom, from(#444), to(#111));
@@ -345,7 +344,7 @@ table {
 			position: absolute;
 			top: 40px;
 			width: 100%;
-			z-index: 1;
+			z-index: 10;
 			background-color: #444;
 			display: none;
 			-moz-box-shadow: none;
@@ -452,11 +451,11 @@ table {
 
 .slider-wrapper { 
 	width: 71%;
-	margin: 100px auto;
+	
 	position: absolute;
-	top:32%;
+	top:105%;
 	left: 14.5%;
-	z-index: 20;
+	
 }
 
 /*====================*/
@@ -464,4 +463,23 @@ table {
 /*====================*/
 .clear {
 	clear:both;
+}
+#cont {
+  margin:0 auto;
+  padding:5px;
+  text-align:center;
+  width:72%;
+}
+
+#login_text {
+  background-color:#FFFFFF;
+  background-position:initial initial;
+  background-repeat:initial initial;
+  border:1px solid #CCCCCC;
+  border-bottom-left-radius:10px;
+  border-bottom-right-radius:10px;
+  border-top-left-radius:10px;
+  border-top-right-radius:10px;
+  color:#000000;
+  height:800px; 
 }
