--- a/static/css/default/default.css
+++ b/static/css/default/default.css
@@ -1,26 +1,18 @@
-/*
-Skin Name: Nivo Slider Default Theme
-Skin URI: http://nivo.dev7studios.com
-Description: The default skin for the Nivo Slider.
-Version: 1.3
-Author: Gilbert Pellegrom
-Author URI: http://dev7studios.com
-Supports Thumbs: true
-*/
-
 .theme-default .nivoSlider {
 	position:relative;
 	background:#fff url(loading.gif) no-repeat 50% 50%;
-    margin-bottom:10px;
+    margin-bottom:50px;
     -webkit-box-shadow: 0px 1px 5px 0px #4a4a4a;
     -moz-box-shadow: 0px 1px 5px 0px #4a4a4a;
     box-shadow: 0px 1px 5px 0px #4a4a4a;
+    border-radius: 4px 4px 4px 4px;
 }
 .theme-default .nivoSlider img {
 	position:absolute;
 	top:0px;
 	left:0px;
 	display:none;
+	border-radius: 4px 4px 4px 4px;
 }
 .theme-default .nivoSlider a {
 	border:0;
@@ -30,15 +22,18 @@ Supports Thumbs: true
 .theme-default .nivo-controlNav {
 	text-align: center;
 	padding: 20px 0;
+
 }
 .theme-default .nivo-controlNav a {
 	display:inline-block;
 	width:22px;
 	height:22px;
+
 	background:url(bullets.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
 	margin: 0 2px;
+
 }
 .theme-default .nivo-controlNav a.active {
 	background-position:0 -22px;
@@ -56,6 +51,7 @@ Supports Thumbs: true
     -moz-transition: all 200ms ease-in-out;
     -o-transition: all 200ms ease-in-out;
     transition: all 200ms ease-in-out;
+    
 }
 .theme-default:hover .nivo-directionNav a { opacity: 1; }
 .theme-default a.nivo-nextNav {
