--- a/static/css/style.css
+++ b/static/css/style.css
@@ -451,7 +451,6 @@ table {
 
 .slider-wrapper { 
 	width: 71%;
-	
 	position: absolute;
 	top:105%;
 	left: 14.5%;
@@ -482,4 +481,10 @@ table {
   border-top-right-radius:10px;
   color:#000000;
   height:800px; 
+}
+.theme-default #slider {
+
+    width:100%; /* Make sure your images are the same size */
+    height:360px; /* Make sure your images are the same size */
+    
 }
