--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,7 +54,6 @@ table {
 .global-nav {
     background-image: url("../images/win.png");
     background-repeat: no-repeat;
-
     position: relative;
     width: 100%;
     height: 190px;
@@ -72,7 +71,7 @@ table {
     width: 960px;
 }
 .container_12 .prefix_11 {
-    padding-left: 880px;
+    padding-left: 850px;
 }
 .grid_1, .grid_2, .grid_3, .grid_4, .grid_5, .grid_6, .grid_7, .grid_8, .grid_9, .grid_10, .grid_11, .grid_12, .grid_13, .grid_14, .grid_15, .grid_16 {
     display: inline;
@@ -81,11 +80,11 @@ table {
     margin-right: 10px;
 }
 .logo_1{
-    display: inline;
+    display: block;
     float: left;
-    margin-left: 10px;
+    margin-left: 180px;
     margin-right: 10px;
-    padding-left:200px;
+    margin-top: -5px;
 }
 .v_18{
     display: inline;
@@ -120,8 +119,8 @@ table {
 
 #menu {
     width: 960px;
-    margin: auto;
-    margin-top: 5px;
+    margin-top: -32px;
+    margin-left: 4px;;
     border: 1px solid #222;
     background-color: #111;
     background-image: -moz-linear-gradient(#444, #111); 
@@ -136,6 +135,8 @@ table {
     -moz-box-shadow: 0 1px 1px #777, 0 1px 0 #666 inset;
     -webkit-box-shadow: 0 1px 1px #777, 0 1px 0 #666 inset;
     box-shadow: 0 1px 1px #777, 0 1px 0 #666 inset;
+    float: left;
+    display: block;
 }
 
 #menu:before,
@@ -454,7 +455,7 @@ table {
     width: 71%;
     position: absolute;
     top:105%;
-    left: 14.5%;
+    left: 5px;
 
 }
 
@@ -472,20 +473,22 @@ table {
 }
 
 #login_text {
-    background-color:#FFFFFF;
+    background-color:#D5E6F9;
     background-position:initial initial;
     background-repeat:initial initial;
-    border:1px solid #CCCCCC;
+    border:1px solid #575757;
     border-bottom-left-radius:10px;
     border-bottom-right-radius:10px;
     border-top-left-radius:10px;
     border-top-right-radius:10px;
     color:#000000;
     height:800px; 
+    position: relative;
+    z-index: 2
 }
 .theme-default #slider {
 
-    width:100%; /* Make sure your images are the same size */
-    height:360px; /* Make sure your images are the same size */
+    width:960px; /* Make sure your images are the same size */
+    height:350px; /* Make sure your images are the same size */
 
 }
