--- a/static/css/style.css
+++ b/static/css/style.css
@@ -473,7 +473,7 @@ table {
 }
 
 #login_text {
-    background-color:#D5E6F9;
+    background-color:#FFFFFF;
     background-position:initial initial;
     background-repeat:initial initial;
     border:1px solid #575757;
