--- a/static/css/style.css
+++ b/static/css/style.css
@@ -476,7 +476,7 @@ table {
     background-color:#FFFFFF;
     background-position:initial initial;
     background-repeat:initial initial;
-    border:1px solid #575757;
+    border:1px solid #CCCCCC;
     border-bottom-left-radius:10px;
     border-bottom-right-radius:10px;
     border-top-left-radius:10px;
