--- a/static/css/style (copia).css
+++ b/static/css/style (copia).css
@@ -64,12 +64,15 @@ background: url(../images/sky.png) no-repeat center center;
     background-size: cover;
 
 }
+.prueba {
+    background: url("../images/win.png")  no-repeat center center;
+
+
+}
 .global-nav {
-    background: url("../images/win.png")no-repeat center center;
-    position: absolute;
+
     width: 100%;
     height: 190px;
-    overflow: hidden;
 }
 #top {
     background: none repeat scroll 0 0 transparent;
@@ -86,8 +89,8 @@ float: right;
 
 .logo_1{    
     float: left;
-    margin-top: 2px;
-    margin-left: 265px;
+    margin-top: 40px;
+    margin-left: -60px;
 }
 .logo_2{
     float: left;
@@ -95,7 +98,62 @@ float: right;
     margin-right: 10px;
     margin-top: 30px;
 }
+/*
+.global-nav {
+    background-image: url("../images/win.png");
+    background-repeat: no-repeat;
+    position: relative;
+    width: 100%;
+    height: 190px;
+}
+#top {
+    background: none repeat scroll 0 0 transparent;
+    left: 0;
+    position: relative;
+    top: 0;
+    width: 100%;
+}
+.container_12, .container_16 {
+    margin-left: auto;
+    margin-right: auto;
+    width: 960px;
+}
+.container_12 .prefix_11 {
+    padding-left: 850px;
+}
+.grid_1, .grid_2, .grid_3, .grid_4, .grid_5, .grid_6, .grid_7, .grid_8, .grid_9, .grid_10, .grid_11, .grid_12, .grid_13, .grid_14, .grid_15, .grid_16 {
+    display: inline;
+    float: left;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.logo_1{
+    display: block;
+    float: left;
+    margin-left: 180px;
+    margin-right: 10px;
+    margin-top: -5px;
+}
+.v_18{
+    display: inline;
+    float: right;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-left:880px;
 
+}
+
+.fondo {
+    background-color: #eef6ff;
+    background-attachment: fixed;
+    background-image: url("../images/sky.png");
+    background-repeat: no-repeat;
+    position: relative;
+
+}*/
+.menu_capa {
+
+}
 #menu, #menu ul {
     margin: 0;
     padding: 0;
@@ -104,8 +162,8 @@ float: right;
 
 #menu {
     width: 960px;
-    /*margin-top: -32px;*/
-    margin-left: 4px;
+    margin-top: -32px;
+    margin-left: 4px;;
     border: 1px solid #222;
     background-color: #111;
     background-image: -moz-linear-gradient(#444, #111); 
@@ -455,7 +513,6 @@ float: right;
     padding:5px;
 /*    text-align:center;*/
     width:72%;
-
 }
 
 #login_text {
@@ -470,7 +527,7 @@ float: right;
     color:#000000;
     height:800px; 
     position: relative;
-    
+    z-index: 2
 }
 .theme-default #slider {
 
